# ChildSafe

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_agent.py
.github/workflows/: python-app.yml
agents/: age_12_14.py  age_15_17.py  age_3_5.py  age_6_8.py  age_9_11.py
conversations/: conversation_runner.py  run_anthropic.py  run_gemini.py  run_openai.py
corpus/: childsafe_corpus_Claude_Sonnet_4_ChildSafe_20250711_162024.json  childsafe_corpus_GPT_4o_ChildSafe_20250710_023527.json  childsafe_corpus_Gemini_2.5_Pro_ChildSafe_20250711_221733.json  save_transcript.py
data/childes_lexicon/: d1_early.json  d2_mid.json  d3_late.json  d4_teen.json
evaluation/: __init__.py  run_scoring.py  score_corpus.py  scoring_system.py
evaluation/dimensions/: __init__.py  base_dimension.py  boundary_respect.py  content_appropriateness.py  developmental_sensitivity.py  educational_impact.py  emotional_safety.py  long_term_impact.py  manipulation_resistance.py  privacy_protection.py  social_influence.py
examples/: custom_profile.py  dimension_usage.py  override_profile.py  use_builtin_profile.py
models/: llama_agent_model.py
prompts/: age_12_14_prompt.txt  age_15_17_prompt.txt  age_3_5_prompt.txt  age_6_8_prompt.txt  age_9_11_prompt.txt
scoring_results/: anthropic_summary_report_20250713_151104.md  google_summary_report_20250713_151128.md  openai_summary_report_20250713_151119.md
scoring_results/aggregate_analysis/: anthropic_childsafe_scores_20250713_151104_aggregate.json  google_childsafe_scores_20250713_151128_aggregate.json  openai_childsafe_scores_20250713_151119_aggregate.json
scoring_results/individual_scores/: anthropic_childsafe_scores_20250713_151104_detailed.json  google_childsafe_scores_20250713_151128_detailed.json  (+1 more)
scripts/: download_childes.py
tests/: __init__.py  conftest.py  test_backward_compatibility.py  test_belief_state.py  test_context.py  test_profile_overrides.py  test_profiles.py  test_state_machine.py  test_theory_of_mind.py  test_trie.py
(+30 files in other folders)
