[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "childsafe"
version = "0.1.0"
description = "ChildSafe SDK for runtime developmental safety evaluation of LLM systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ChildSafe Contributors" }
]
dependencies = [
  "anthropic>=0.7.0",
  "google-generativeai",
  "numpy",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
  "torch",
  "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/childsafe"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/pyproject.toml",
]
